# Senate-Search

./: README.md
backend/: .gitignore  README.md  pyproject.toml
backend/backend/: .gitignore  auth.py  extract.py  main.py
backend/backend/database/: database.py  text_database.py
backend/backend/extract/: extract.py
backend/backend/search/: search.py
backend/util/: extract.py  search.py
frontend/: README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.js
frontend/src/Pages/: Agenda.js  Handbook.js  Login.js  Search.js  Upload.js  ViewMeeting.js
frontend/src/components/: AppShell.js  LoginButton.js  Navbar.js  PDFviewer.js  SearchBox.css  SearchBox.js  UploadButton.css  UploadButton.js
frontend/src/test:mocha/: Agenda.test.js  Handbook.test.js  Search.test.js  TestAgendaPage.test.js  Upload.test.js
