[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend Webserver Module for Senate Search"
authors = ["Rachit Keerti Das <rachitkdas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
pydantic = "^1.10.7"
requests = "^2.28.2"
google-auth = "^2.17.3"
python-dotenv = "^1.0.0"
python-multipart = "^0.0.6"
PyPDF2 = "^3.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^6.0.0"
isort = "^5.12.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
